src/bootstrap/test/v0_13/rejects/07_wrong_platform_entry_macos/main_linux.zg
print "should not run on macos"
